<resources>
    <string name="app_name">Coating Inspection</string>

    <string name="login_page">LOGIN PAGE</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="nama_file">Nama File</string>
    <string name="select_file">Select File</string>
    <string name="upload_file">Upload File</string>
    <string name="department">Department</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="ver_password">Retype Password</string>
    <string name="register">REGISTER</string>
    <string name="register_new">CREATE NEW ACCOUNT</string>
    <string name="admin_reg">Administrator Registration</string>
    <string name="user_reg">User Registration</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="dbl_dot"> : </string>
    <string name="activation_code">Activation Code</string>
    <string name="dokumen">DOKUMEN</string>
    <string name="raw_material">RAW MATERIAL</string>
    <string name="block_stage">BLOCK STAGE</string>
    <string name="after_erection">AFTER ERECTION</string>
    <string name="final_inspect">INSPEKSI FINAL</string>
    <string name="owner">Owner</string>
    <string name="nama_proyek">Nama Proyek</string>
    <string name="panjang_kapal">Panjang Kapal</string>
    <string name="lebar_kapal">Lebar Kapal</string>
    <string name="tinggi_kapal">Tinggi Kapal</string>
    <string name="muatan_kapal">Muatan Kapal</string>
    <string name="mulai_proyek">Mulai Proyek</string>
    <string name="selesai_proyek">Selesai Proyek</string>
    <string name="kode_verifikasi">Kode Verifikasi Proyek untuk User</string>
    <string name="daftarkan_NIK">Daftarkan NIK User</string>
    <string name="class_kapal">Class Kapal</string>
    <string name="block_name_or_area">Nama Blok/Area</string>
    <string name="block_name">Nama Blok</string>
    <string name="standard">Standard</string>
    <string name="proses">Proses</string>
    <string name="swp1">Steel Work Preparation 1</string>
    <string name="swp2">Steel Work Preparation 2</string>
    <string name="roughness">Roughness</string>
    <string name="sspfirstc">Secondary Surface Preparation and 1st Coat</string>
    <string name="ssps">Secondary Surface Preparation and Shop Primer</string>
    <string name="firstcfirstsc">1st Coat and 1st Stripe Coat</string>
    <string name="firstscsecondsc">1st Stripe Coat and 2nd Stripe Coat</string>
    <string name="secondscsecondc">2nd Stripe Coat and 2nd Coat</string>
    <string name="secondcthirdc">2nd Coat and 3rd Coat</string>
    <string name="thirdcforthc">3rd Coat and 4th Coat</string>
    <string name="forthcfifthc">4th Coat and 5th Coat</string>
    <string name="first_coat">1st Coat</string>
    <string name="second_coat">2nd Coat</string>
    <string name="third_coat">3rd Coat</string>
    <string name="forth_coat">4th Coat</string>
    <string name="fifth_coat">5th Coat</string>
    <string name="comply">Comply to IMO PSPC</string>
    <string name="lokasi">Lokasi</string>
    <string name="help">Help?</string>
    <string name="posisi_blok">Posisi Blok</string>
    <string name="visual_inspection">Visual Inspection</string>
    <string name="prep_grade">Preparation Grade</string>
    <string name="sharp_edges">Sharp Edges</string>
    <string name="gap">Gap</string>
    <string name="comment">Comment</string>
    <string name="nama_dokumen">Nama Dokumen</string>
    <string name="import_photo">Import Photo</string>
    <string name="imperfect_welding">Imperfect Welding</string>
    <string name="miss_weld">Miss Weld (Cacat Las)</string>
    <string name="imperfect_Steel_surface">Imperfect Steel Surface</string>
    <string name="steel_condition_confirm">Steel Condition Confirm</string>
    <string name="type_of_defect">Type of Defect</string>
    <string name="repair_method">Repair Method</string>
    <string name="repair_confirm">Repair Confirmation Date</string>
    <string name="inspection_documentation">Inspection Documentation</string>
    <string name="steel_temp">Steel Temperature</string>
    <string name="relative_humidity">Relative Humidity</string>
    <string name="dew_point">Dew Point</string>
    <string name="surface_contaminant">Surface Contaminant</string>
    <string name="solvent_cleaning">Solvent Cleaning</string>
    <string name="solvent_cleaning_method">Solvent Cleaning Method</string>
    <string name="brush_wetted_with_solvent">Brush Wetted With Solvent</string>
    <string name="solvent_spray">Solvent Spray</string>
    <string name="stabilized_chlor_hc_solvent">Stabilized Chlorinated Hydrocarbon Solvent</string>
    <string name="immerse_in_a_tank">Immerse in a Tank of Solvent</string>
    <string name="emulsion_or_alkaline_cleaner">Emulsion or Alkaline Cleaner</string>
    <string name="steam_clean">Steam Clean</string>
    <string name="using_detergent">Using Detergents</string>
    <string name="fresh_water_cleaning">Fresh Water Cleaning</string>
    <string name="surface_tretement_method">Surface Treatment Method</string>
    <string name="mechanical_tool">Mechanical Tool</string>
    <string name="st_2">St 2</string>
    <string name="st_3">St 3</string>
    <string name="sa_1">Sa 1</string>
    <string name="sa_2">Sa 2</string>
    <string name="sa_2_1_2">Sa 2 (&#189;)</string>
    <string name="sa_3">Sa 3</string>
    <string name="blasting">Blasting</string>
    <string name="abrasive_material">Abrasive Material</string>
    <string name="type_of_abrasive">Type of Abrasive</string>
    <string name="abrasive_size">Abrasive Size</string>
    <string name="grade">Grade</string>
    <string name="blasting_condition">Blasting Condition</string>
    <string name="time_and_Date">Time and Date</string>
    <string name="rust_grade">Rust Grade</string>
    <string name="sweep_spot_blasting">Sweep Spot Blasting</string>
    <string name="full_blasting">Full Blasting</string>
    <string name="dust_quantity_rating">Dust Quantity Rating</string>
    <string name="test1">Test 1</string>
    <string name="test2">Test 2</string>
    <string name="test3">Test 3</string>
    <string name="test4">Test 4</string>
    <string name="result">Result</string>
    <string name="surface_profile_measurement">Surface Profile Measurement</string>
    <string name="soluble_salt_measurement">Soluble Salt Measurement</string>
    <string name="soluble_salt_formula">Soluble Salt Formula</string>
    <string name="soluble_formula">((C.V.(&#916;)(y2-y1))/A</string>
    <string name="first_coat_app_method">1st Coat Application Method</string>
    <string name="first_stripe_coat_app_method">1st Stripe Coat Application Method</string>
    <string name="airless_spray">Airless Spray</string>
    <string name="conventional_sprayer">Conventional Sprayer</string>
    <string name="roll_or_brush">Roll or Brush</string>
    <string name="air_temperature">Air Temperature</string>
    <string name="dry_bulb">Dry Bulb (&#8451;)</string>
    <string name="wet_bulb">Wet Bulb (&#8451;)</string>
    <string name="paint_name">Paint Name</string>
    <string name="colour_shade_no">Colour/Shade No</string>
    <string name="batch_no">Batch No</string>
    <string name="thinner_no">Thinner No</string>
    <string name="volume_solid">Volume Solid</string>
    <string name="application_date">Application Date</string>
    <string name="time">Time</string>
    <string name="Curing_time">Curing Time</string>
    <string name="pot_life">Pot Life</string>
    <string name="no_defect">No Defect/Miss Coat</string>
    <string name="no_defects">No Defect</string>
    <string name="no_misscoat">No Misscoat</string>
    <string name="dft_measurement">Dry Film Thickness Measurements</string>
    <string name="area">Area</string>
    <string name="number_of_test_point">Number of Test Point</string>
    <string name="min_dft">Minimum DFT</string>
    <string name="max_dft">Maximum DFT</string>
    <string name="avg_dft">Average DFT</string>
    <string name="stripe_coat_condition">Stripe Coat Condition</string>
    <string name="application_method">Application Method</string>
    <string name="painting_scheme">Painting Scheme</string>

    <string name="jenis">Jenis</string>
    <string name="pelat">Pelat</string>
    <string name="profil">Profil</string>
    <string name="nama_komponen">Nama Komponen</string>
    <string name="id_komponen">ID Komponen</string>
    <string name="nama_blok">Nama Blok</string>
    <string name="ctIMOPSPC">Comply to IMO PSPC</string>

    <!-- button -->
    <string name="login_btn">LOGIN</string>
    <string name="sign_up_btn">Sign Up!</string>
    <string name="forgot_pass_btn">Forgot Password?</string>
    <string name="admin_reg_btn">Admin Registration</string>
    <string name="user_reg_btn">User Registration</string>
    <string name="back_btn">BACK</string>
    <string name="proceed_btn">PROCEED</string>
    <string name="submit_btn">SUBMIT</string>
    <string name="reset_btn">RESET</string>
    <string name="register_btn">REGISTER</string>
    <string name="update_btn">UPDATE</string>
    <string name="save_btn">SAVE</string>
    <string name="logout_btn">LOGOUT</string>
    <string name="lihat_btn">LIHAT</string>
    <string name="edit_btn">EDIT</string>
    <string name="hapus_btn">HAPUS</string>
    <string name="add_project">TAMBAH PROYEK</string>
    <string name="add_file">TAMBAH FILE</string>
    <string name="list_file">LIST FILE</string>
    <string name="add_data">TAMBAH DATA</string>
    <string name="list_data">LIST DATA</string>
    <string name="report">REPORT</string>
</resources>
