<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvNamaBlok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Komponen 1"
        android:textSize="@dimen/text_username"
        android:textColor="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Detail"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btnHapus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hapus_btn"
            android:layout_weight="1"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnSwp1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_inside_text"
        android:text="@string/swp1"/>

    <Button
        android:id="@+id/btnSspsp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_inside_text"
        android:text="@string/ssps"/>

    <Button
        android:id="@+id/btnSwp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_inside_text"
        android:text="@string/swp2"/>

    <Button
        android:id="@+id/btnSwp1ae"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_inside_text"
        android:text="Steel Work Preparation 1 After Erection"/>

    <Button
        android:id="@+id/btnSwp2ae"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_inside_text"
        android:text="Steel Work Preparation 2 After Erection"/>

    <Button
        android:id="@+id/btnSsp1c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_inside_text"
        android:text="@string/sspfirstc"/>

    <Button
        android:id="@+id/btn1c1sc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_inside_text"
        android:text="@string/firstcfirstsc"/>

    <Button
        android:id="@+id/btn1sc2sc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_inside_text"
        android:text="@string/firstscsecondsc"/>


    <Button
        android:id="@+id/btn2sc2c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_inside_text"
        android:text="@string/secondscsecondc"/>

    <Button
        android:id="@+id/btn2c3c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_inside_text"
        android:text="@string/secondcthirdc"/>

    <Button
        android:id="@+id/btn3c4c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_inside_text"
        android:text="@string/thirdcforthc"/>

    <Button
        android:id="@+id/btn4c5c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_inside_text"
        android:text="@string/forthcfifthc"/>

    <Button
        android:id="@+id/btnPullOff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/button_inside_text"
        android:text="Pull Off Adhesion Test"/>
</LinearLayout>