<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tambah_proyek"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="activity.AddProjectActivity">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:id="@+id/svAdd">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owner"
                android:id="@+id/tvOwner"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edOwner"
                android:inputType="text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_proyek"
                android:id="@+id/tvNamaProyek"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edNamaProyek"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/panjang_kapal"
                android:id="@+id/tvPanjangKapal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edPanjangKapal"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lebar_kapal"
                android:id="@+id/tvLebarKapal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edLebarKapal"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tinggi_kapal"
                android:id="@+id/tvTinggiKapal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edTinggiKapal"
                android:inputType="numberDecimal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/muatan_kapal"
                android:id="@+id/tvMuatanKapal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edMuatanKapal"
                android:inputType="numberDecimal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sarat Kapal"
                android:id="@+id/tvSaratKapal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edSaratKapal"
                android:inputType="text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Jenis Kapal"
                android:id="@+id/tvJenisKapal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edJenisKapal"
                android:inputType="text"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mulai_proyek"
                    android:id="@+id/tvMulaiProyek"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/selesai_proyek"
                    android:id="@+id/tvSelesaiProyek"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edMulaiProyek"
                    android:inputType="date"/>
                <EditText
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edSelesaiProyek"
                    android:inputType="date"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daftarkan_NIK"
                android:id="@+id/tvDaftarkanNIK"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edDaftarNIK1"
                android:inputType="text"
                android:hint="Coating Inspector"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edDaftarNIK2"
                android:inputType="text"
                android:hint="Owner"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edDaftarNIK3"
                android:inputType="text"
                android:hint="Shipyard"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edDaftarNIK4"
                android:inputType="text"
                android:hint="Class"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/class_kapal"
                android:id="@+id/tvClassKapal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edClassKapal"
                android:inputType="text"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/svAdd">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnBack"
            android:text="@string/back_btn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnUpdate"
            android:text="@string/submit_btn"/>
    </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
